# mineria

./: .buildinfo  firstglance.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  pyproject.toml  search.html  searchindex.js  second.html
_sources/: second.ipynb
segundoentregable/: _toc.yml  firstglance.ipynb  intro.md  second.ipynb
segundoentregable/_build/.doctrees/: environment.pickle  firstglance.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  second.doctree
segundoentregable/_build/html/: .buildinfo  firstglance.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  second.html
segundoentregable/_build/html/_sources/: firstglance.ipynb  second.ipynb
segundoentregable/_build/jupyter_execute/: firstglance.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  second.ipynb
