[tool.poetry]
name = "proyecto-mineria"
version = "0.1.0"
description = ""
authors = ["adcerro <adcerro@uninorte.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.2"
pandas = "^2.2.2"
ghp-import = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
